+++ Fix founded bugs + Fix lower blocks in the second section in mobile version + Fixes for devices with squaric aspect rations + Fix too left-tilted header of "used tech" in 3rd section + In the 4th section opacity of blocks don't change in starting animation + Fix 2nd section overlapping over the 3rd in mobile version + Fix 2nd case pic dropping lower than the 1st one in 4th section modal in mobile

--- a/src/front.css
+++ b/src/front.css
@@ -462,7 +462,8 @@ li {
     position: relative;
     z-index: 20;
     width: 100%;
-    height: 100vh !important;
+    /* height: 100vh !important; */
+    min-height: 100%;
     background-size: cover;
     background-attachment: fixed;
     background-color: #171717;
@@ -478,6 +479,8 @@ li {
     font-size: 3rem;
     position: relative;
     background-color: #3B2A66;
+    min-height: 7rem;
+    min-width: 14rem;
     height: 7rem;
     width: 14rem;
     border-bottom-left-radius: 14rem;
@@ -1193,17 +1196,22 @@ li {
         right: 2rem;
         font-size: 1.5rem;
     }
-    .section-2 {
-        max-height: 92.5vh !important;
+    .section-2-sides-wrapper {
+        display: flex;
+        width: 100%;
+        align-items: flex-start;
+        justify-content: space-between;
     }
     .section-2-my-interests {
         top: auto;
         bottom: 8vh;
         left: 0;
-        margin-top: 2rem;
+        margin-top: 1rem;
         margin-left: 1rem;
         width: 50vw;
         opacity: 0;
+        position: relative;
+        margin-bottom: 0;
         transition: all 1.5s ease-in-out;
     }
     .section-2-my-interests-p1 {
@@ -1221,7 +1229,9 @@ li {
         margin-right: 2rem;
         width: 20rem;
         height: 35vh;
-        margin-bottom: 5vh;
+        position: relative;
+        margin-bottom: 0;
+        margin-top: 1rem;
     }
     .section-2-facts-slider {
         width: 22.5rem;
@@ -1282,10 +1292,11 @@ li {
         font-size: 1.3rem;
     }
     .section-3-used-tech {
-        /* top: initial; */
         top: 80vh;
-        /* transform: rotate(10deg) translate(-150rem); */
         transition: 0.3s all ease-in-out;
+    }
+    .section-3-used-tech-header {
+        transform: translate(3rem, 0);
     }
     .section-3-used-tech-header:after {
         height: 1px;
@@ -1359,9 +1370,11 @@ li {
         width: 45vw;
     }
     #section-4-case-modal .case-modal-link-part a.underline-hover-link {
-        display: table;
-        width: auto;
+        display: block;
+        width: 100%;
         margin-bottom: 2rem;
+        line-height: 3rem;
+        margin-top: -1rem;
     }
     #section-4-case-modal .case-modal-link-part img {
         max-height: 15vh;
@@ -1372,6 +1385,21 @@ li {
     .slideOutRight,
     .slideInRight {
         animation-duration: .3s !important;
+    }
+}
+
+/*----------- Phones with squaric aspect ratios ---------------*/
+@media  screen and (max-width:1280px) and (min-aspect-ratio: 360/590) {
+    #section-1-back-container {
+        top: -6vh;
+        left: -90vw;
+    }
+    .section-2-sides-wrapper {
+        display: none;
+    }
+
+    #section-4-case-modal .case-modal-content {
+        font-size: 1.1rem;
     }
 }
 
